overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: explained
  labels:
    app.kubernetes.io/part-of: explained
